--- a/styles/modal.css
+++ b/styles/modal.css
@@ -64,6 +64,7 @@
 }
 
 .input-container input {
+    width: 100%;
     padding: .8rem;
     font-size: 1.1em;
     border: 1px solid #dadada;
@@ -71,7 +72,7 @@
     outline: none;
 }
 
-form .button-group {
+.button-group {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 1.5rem;
