Adicionando a funcionalidade de editar doação

--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ section#status {
 
 .status-item {
     padding: 1.5rem;
-    background-color: #f7fffa;
+    background-color: #fcfcfc;
     border: 1px solid #dadada;
     border-radius: .6rem;
 }
