--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -1,14 +1,15 @@
 #new-action {
     display: inline-block;
     padding: .5rem;
-    background-color: #b0d8cb;
-    color: #FFF;
+    background-color: #1c2220;
+    color: rgba(255, 255, 255, 0.493);
     border-radius: .3rem;
     transition: all .3s;
 }
 
 #new-action:hover {
-    background-color: #1bac7b;
+    background-color: var(--green-light);
+    color: #333;
 }
 
 
