--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,8 @@
+:root {
+    --green-light: #27dbae;
+    --gray: #333;
+    --light-gray: #8a8a8a;
+}
 * {
     padding: 0;
     margin: 0;
@@ -5,17 +10,17 @@
 }
 
 ::-webkit-scrollbar {
-    background: var(--bg-color);
+    border-radius: 1rem;
+    background: #FFF;
     width: .8rem;
-    height: .8rem;
-    padding: 0.2rem;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #dadada;
-    border: 3px solid #FFF;
+    background-color: #777;
     border-radius: .5rem;
+    border: 2px solid #FFF;
 }
+
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -23,6 +28,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #FFF;
 }
 
 a {
