--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,3 +1,5 @@
+
+
 .modal-overlay {
     opacity: 0;
     overflow: hidden;
@@ -13,8 +15,8 @@
     align-items: center;
     justify-content: center;
     position: fixed;
-    background-color: #d6d6d61c;
-    backdrop-filter: blur(10px);
+    background-color: #24242470;
+    backdrop-filter: blur(20px);
     width: 100%;
     height: 100%;
     top: 0;
@@ -29,7 +31,6 @@
     width: min(90%, 512px);
     height: 400px;
     overflow-y: auto;
-    box-shadow: 0px 8px 13px #b3b3b37e;
 }
 
 
@@ -91,7 +92,6 @@
 
 span.succes-add-action {
     position: absolute;
-    margin-left: -10rem;
     transition: all .2s;
     opacity: 0;
 }
@@ -109,6 +109,24 @@ span.succes-add-action.active {
     justify-content: center;
     background-color: #444;
     border-radius: .2rem;
-    box-shadow: 0px 10px 15px rgba(68, 68, 68, 0.534);
+    box-shadow: 0px 10px 15px rgba(24, 24, 24, 0.534);
 
 } 
+
+/* EDIT ACTION FORM ============= */
+
+#edit .modal {
+    height: auto;
+}
+
+select {
+    padding: 1rem;
+    border: 1px solid #dadada;
+    border-radius: .2rem;
+    margin-bottom: 1rem;
+    width: 100%;
+}
+
+option {
+    padding: .3rem;
+}
