--- a/styles/style.css
+++ b/styles/style.css
@@ -14,26 +14,28 @@
 #app {
     width: 100%;
     height: 100%;
-    background-color: #FFFF;
+    /* background-color: rgb(41, 41, 41); */
+    background-color: #FFF;
 }
 
 header {
     width: 100%;
     text-align: center;
     padding: 4rem 0 6rem;
-    background: #0da35d;
+    background: #222;
     /* box-shadow: 2px 3px 7px #dadadad3; */
-    border-bottom: 1px solid #dadada    ;
+    /* border-bottom: 1px solid #dadada; */
 }
 
 header h1 {
-    font-size: 3rem;
-    color: #FBFBFB;
+    font-size: 2.5rem;
+    color: #22c29a;
 }
 
 section#status {
+    margin-top: 2rem;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     margin-top: -2rem;
     gap: 1rem;
     position: relative;
@@ -42,19 +44,21 @@ section#status {
 
 #status h2 {
     font-size: 1em;
-    color: #444;
+    color: #8a8a8a;
 }
 
 #status p {
     font-size: 1.8em;
-    font-weight: 300;
+    font-weight: 400;
+    color: #00b98b;
 }
 
 .status-item {
     padding: 1.5rem;
-    background-color: #fcfcfc;
+    background-color: #FFF;
     border: 1px solid #dadada;
-    border-radius: .6rem;
+    border-radius: .3rem;
+    box-shadow: 0px 10px 17px rgba(68, 68, 68, 0.158);
 }
 
 /* Barra de pesquisa ========================== */
@@ -109,11 +113,98 @@ section#actions {
 }
 
 li.action-item {
+    display: flex;
+}
+
+li.action-item .content {
+    display: flex;
+    flex-direction: column;
+    width: 88%;
+    padding: .6rem;
+    background-color: #FFFF;
+    border: 1px solid #dadada;
+    border-radius: .3rem;
+}
+
+li.action-item .content .content-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* width: 90%; */
+    position: relative;
+    /* padding: .6rem; */
+    /* background-color: #323232; */
+    /* border-radius: .3rem; */
+}
+
+li.action-item .content .content-title h3 {
+    font-size: 1.4em;
+    color: #222;
+}
+
+li.action-item .content .content-title small {
+    font-weight: 500;
+    color: rgb(155, 155, 155);
+    margin-top: .4rem;
+    margin-bottom: .8rem;
+}
+
+li.action-item .content .infos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1.7rem;
+    gap: .3rem;
+    grid-template-areas: 
+    "p1 p2 p3"
+    "p4 p4 p4";
+}
+.p1 { 
+    grid-area: p1; 
+    color: #9868E5;
+}
+.p2 { 
+    grid-area: p2;
+    color: #DDCC33;
+ }
+.p3 { 
+    grid-area: p3; 
+    color: #3CD1B6;
+}
+.p4 { 
+    grid-area: p4;
+    text-align: center; 
+    color: #8b8b8b;
+}
+li.action-item .content .infos p {
+    padding: .3rem;
+    background-color: #f7f7f7;
+    border-radius: .3rem;
+}
+
+li.action-item .content .infos p span {
+    display: inline-block;
+}
+
+li.action-item .aside {
+    display: flex;
+    flex-direction: column;
+    margin-left: .5rem;
+}
+
+li.action-item .aside .aside-item {
+    padding: .8rem .3rem;
+    background-color: #dadada;
+    border-radius: 1rem;
+}
+li.action-item .aside .aside-item:last-child {
+    margin-top: .4rem;
+}
+
+/* li.action-item {
     display: grid;
     grid-template-columns: 5fr 1fr;
     gap: 1rem;
     text-align: center;
-    /* background-color: #555; */
     border: 1px solid #dadada;
     border-radius: .3rem;
 }
@@ -180,39 +271,8 @@ li.action-item .aside img {
 
 li.action-item .aside img:hover {
     opacity: 1;
-}
+} */
 
-/* Tabela =========================================== */
-#data-table {
-    width: 100%;
-    border-spacing: 0 0.5rem;
-    color: #dadada;
-}
-
-
-table thead tr th:first-child,
-table tbody tr td:first-child {
-    border-radius: 0.6rem 0 0 0.6rem;
-}
-
-table thead tr th:last-child,
-table tbody tr td:last-child {
-    border-radius: 0 0.6rem 0.6rem 0;
-}
-
-table th {
-    background-color: #111;
-    padding: 1rem;
-    text-align: left;
-    font-weight: 600;
-}
-
-
-table td{
-    background: #fafafa;
-    padding: 1rem;
-    color: #555;
-}
 
 footer {
     padding: 5rem;
