--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -49,15 +49,18 @@ a:hover{
     opacity: 1;
 }
 
-a.stroke-button {
+.stroke-button {
     padding: .5rem;
     color: #000;
     border: 3px solid #000;
     border-radius: .3rem;
     transition: all .3s;
+    background: none;
+    font-weight: 600;
+    cursor: pointer;
 }
 
-a.stroke-button:hover {
+.stroke-button:hover {
     background-color: #000;
     color: #FFF;
     border: 3px solid #000;
